<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResultFragment">

    <TextView
        android:id="@+id/tvClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/tv_cleartime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/tv_answer_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/bt_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCleartime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time"
        app:layout_constraintBottom_toBottomOf="@+id/tvClear"
        app:layout_constraintStart_toEndOf="@+id/tvClear"
        app:layout_constraintTop_toTopOf="@+id/tvClear" />

    <TextView
        android:id="@+id/tvanswerResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        app:layout_constraintBottom_toBottomOf="@+id/tvCorrectAnswer"
        app:layout_constraintStart_toEndOf="@+id/tvCorrectAnswer"
        app:layout_constraintTop_toTopOf="@+id/tvCorrectAnswer" />
</androidx.constraintlayout.widget.ConstraintLayout>